server/kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: health-dashboard-api-service
  namespace: goal-app
  labels:
    app: health-dashboard-api
spec:
  type: ClusterIP
  ports:
  - port: 4000
    targetPort: 4000
    protocol: TCP
    name: http
  selector:
    app: health-dashboard-api
